# AI-Powered-Document-Structuring-Data-Extraction-Task

./: .env  README.md  _main_task.ipynb  app.py  lang_helper.py  output.xlsx  pyproject.toml  requirements.txt
