[project]
name = "task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.52.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.1.0",
    "langchain-huggingface>=1.0.1",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.8",
    "pypdf>=6.3.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
